# bitbangrelay

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  MAINTAINERS  README.md  bitbangrelay  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: build-and-test.yml  ci.yml
scripts/: maintainer.py
src/bitbangrelay/: __init__.py  __main__.py  relay.py
tests/: test_bitbangrelay.py
