# Copyright (c) 2021 SanCloud Ltd
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = bitbangrelay
version = attr: bitbangrelay.__version__
maintainer = Paul Barker
maintainer_email = paul.barker@sancloud.com
license = Apache-2.0 AND CC-BY-4.0 AND CC0-1.0
license_files =
    LICENSES/Apache-2.0.txt
    LICENSES/CC-BY-4.0.txt
    LICENSES/CC0-1.0.txt
description = Simple tool for controlling USB bitbang relay boards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SanCloudLtd/bitbangrelay
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pyyaml
    pylibftdi

[options.entry_points]
console_scripts =
    bitbangrelay = bitbangrelay:main

[options.packages.find]
where=src
